--- a/MovieProjectClient/src/styles/Login.css
+++ b/MovieProjectClient/src/styles/Login.css
@@ -69,7 +69,7 @@
   padding: 0.5rem;
   border-radius: 8px;
   border: 1px solid var(--label-color);
-  background-color: transparent; /* Default background */
+  background-color: transparent;
   color: var(--text-color);
   font-size: var(--font-small);
   outline: none;
@@ -78,7 +78,7 @@
 
 .input-wrapper input:focus {
   border: 1px solid var(--primary-color);
-  background-color: var(--secondary-color); /* Black background on focus */
+  background-color: var(--secondary-color);
 }
 
 .input-wrapper input:focus {
