--- a/MovieProjectAdmin/src/pages/movie/Form/Form.css
+++ b/MovieProjectAdmin/src/pages/movie/Form/Form.css
@@ -81,8 +81,8 @@ h1 {
   border-radius: var(--border-radius);
   box-shadow: 0 4px 8px var(--shadow-color);
   object-fit: cover;
-  margin: 20px auto; /* Center the poster */
-  display: block; /* Ensure it's treated as a block element */
+  margin: 20px auto;
+  display: block;
 }
 
 .form-fields {
@@ -170,7 +170,7 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 10px;
-  flex-direction: row; /* Change this to 'row' for a single row layout */
+  flex-direction: row;
 }
 
 .btn-primary,
@@ -370,10 +370,10 @@ h1 {
 .search-box {
   width: 100%;
   max-width: 80vw;
-  margin: 20px auto; /* Center horizontally */
-  display: flex; /* Align items */
+  margin: 20px auto;
+  display: flex;
   justify-content: center;
-  align-items: center; /* Optional: Align vertically */
+  align-items: center;
 }
 
 .search-box input {
